frontend/test/should_pass/array_map.gm
for function[parallelize=true];

node class N;

node edge unique;
