frontend/test/should_fail/computations_no_assign_func_methodn3.gm
node class N
{
}

node class NN
{
	function bar(n:N) : boolean
	{
		n.visited[0] = true;
		return(n.visited[0]);
	}
}
